<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zeroerr_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yusuf.eskin@metu.edu.tr">sye</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_generic_cia402_drive</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
